# tablebuilder

./: .env.example  .env.sops  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  sa_remoteness_population.csv  tsconfig.json  vitest.config.ts  vitest.e2e.config.ts  walkthrough.md
data/: knowledge.json  northlink_cabee_extract.json  service.db  tablebuilder.env
deploy/: README.md  deploy.sh  nginx.conf  tablebuilder-service.service  tablebuilder.service
docs/: abs_data_structure.puml  census_2021_data_dictionary.md  database_metadata.md  er_diagram.puml  index.html  north_melbourne_10m_business_report.md  north_melbourne_10m_cheat_sheet.md  north_melbourne_10m_email_hook.md  north_melbourne_10m_internal_email.md  north_melbourne_10m_opportunity_playbook.md  north_melbourne_200k_business_report.md  north_melbourne_llm_cheat_sheet.md  north_melbourne_llm_opportunity_playbook.md  totoro_capture_instructions.md
output/: api_deep_dive.json  api_deep_dive_v2.json  api_schema.json  api_tableview.html  capture_add_variable.json  capture_analysis.md  capture_clean_flow.json  capture_log.txt  capture_minimal_v3.json  catalogue_databases_tree.json  catalogue_tables_tree.json  network_capture.json  probed_endpoints.json  schema_cache_2021PersonsEN.json  session_cookies.json
query-planner/: app.js  dictionary.db  index.html  style.css
scripts/: api_deep_dive.py  api_deep_dive_v2.py  api_deep_dive_v3.py  api_direct_access.py  api_explorer.py  api_full_flow.py  batch_fetch.py  batch_fetch_http.py  batch_fetch_retry.py  build-dict.ts  build_pages.py  cache_schema.py  capture_add_variable.py  capture_clean_flow.py  capture_download_flow.py  capture_existing_flow.py  capture_existing_flow_v2.py  capture_minimal_v3.py  check_missing_datasets.py  debug_compare_sessions.py  debug_form_state.py  debug_open_database.py  extract_missing_datasets.py  full_reextract.py  generate_10m_report.py  network_sniffer.py  parse_census_markdown_to_cache.py  probe-catalogue.ts  probe-dblclick.ts  probe-fast-path.ts  probe-header-search.ts  reextract_broken_datasets.py  test-geography-run.ts  test_single_extraction.py
src/: applyEvent.test.ts  auth.test.ts  auth.ts  browse-modal.test.ts  dataset-store.test.ts  logger.test.ts  logger.ts  queue.test.ts  queue.ts  server.datasets.integration.test.ts  server.metadata.test.ts  server.run-validator.test.ts  server.test.ts  server.ts  ui-regression.test.ts
tests/: conftest.py  test_browser.py  test_cli.py  (+29 more)
(+187 files in other folders)
