[project]
name = "tablebuilder"
version = "0.1.0"
description = "CLI to download data from ABS TableBuilder"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "playwright>=1.40",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "jinja2>=3.1",
    "anthropic>=0.52",
    "cryptography>=44.0",
    "python-multipart>=0.0.22",
]

[project.scripts]
tablebuilder = "tablebuilder.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require a real browser and ABS account (deselect with '-m \"not integration\"')",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tablebuilder"]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "openpyxl>=3.1.5",
    "pytest>=9.0.2",
]
