[project]
name = "tablebuilder"
version = "0.1.0"
description = "CLI to download data from ABS TableBuilder"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.86.0",
    "click>=8.1",
    "cryptography>=46.0.5",
    "fastapi>=0.135.1",
    "jinja2>=3.1.6",
    "playwright>=1.40",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "uvicorn>=0.42.0",
]

[project.scripts]
tablebuilder = "tablebuilder.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require a real browser and ABS account (deselect with '-m \"not integration\"')",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tablebuilder"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
